css/style.css
/* Fonts */

@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");


body {
  font-family: Poppins, sans-serif;
  width: 100%;
}

p {
  font-size: 16px;
  color: #344563;
}

h2 {
  color: #172b4d;
  font-weight: bold;
  font-size: 32px;
  line-height: 44px;
}

* {
  margin: 0;
  padding: 0;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 10px;
  height: 48px;
  margin-left: 34px;
  margin-right: 34px;
  padding-left: 52px;
  padding-right: 50px;
}

.navbar img {
  height: 20px;
  width: auto;
  padding: 10px 12px;
}

nav {
  display: none;
}

.logo a {
  transform: rotate(1080deg);
  transition: all 3s;
  color: #6070ff;
  text-decoration: none;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 22px;
  line-height: 20px;
}



main {
  min-height: 100vh;
  background-color: #f7f7f9;
}

.main-content {
  background-image: url("../img/hsm.png");
  background-size: 100%;
  background-position: top right;
  background-repeat: no-repeat;
  background-color: #fff;
  padding: 0 24px;
  display: flex;
  flex-direction: column;
  height: 718px;
  border-radius: 0 0 0 100px;
}

.menu-btn {
  display: none;
  position: fixed;
  z-index: 99;
  left: 0;
  right: 0;
  top: 0;
  background-color: hsl(234, 100%, 69%, 0.9);
  backdrop-filter: blur(4px);
  width: 100%;
  height: 100vh;
  padding: 1em;
  padding-left: 28px;
}

.mobile-menu-exit {
  margin-top: 62px;
  margin-right: 38px;
  cursor: pointer;
  float: right;
}

.modal-links-container a {
  display: block !important;
}

.menu-btn ul {
  margin-top: 106px;
  list-style: none;
  float: left;
}

.menu-btn ul li a {
  display: flex;
  flex-direction: column;
  color: #fff;
  text-decoration: none;
  padding: 0.5em;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 32px;
  line-height: 44px;
  z-index: 9999;
}

.primary {
  margin-top: 114px;
  width: 327px;
  height: 150px;
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

.profile-text {
  margin-top: 12px;
  animation: 15s infinite alternate slidein;
}

@keyframes slidein {
  from {
    margin-left: 100%;
    width: 300%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

.purple-text {
  color: #7f8cff;
  margin-top: 12px;
  font-weight: 500;
}

.social-media-icons {
  margin-top: 14px;
}

.social-list {
  display: flex;
  flex-direction: row;
  list-style: none;
  gap: 20px;
  align-items: center;
}

.works {
  display: grid;
  row-gap: 88px;
  margin: 114px 24px;
}

.skills {
  display: flex;
  flex-direction: row;
  list-style: none;
  gap: 8px;
}

.skills li {
  padding: 4px 12px;
  background-color: #ebebff;
  color: #6070ff;
  border-radius: 8px;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
}

.form {
  display: flex;
  flex-direction: column;
  margin: 77px 24px 0;
}

.form ul li {
  display: flex;
  flex-direction: column;
  list-style: none;
}

.single-work {
  border: 1px solid #dfe1e6;
  border-radius: 16px;
  padding: 16px;
  display: flex;
  flex-direction: column;
  gap: 15px;
  background-color: #fff;
}

.single-work .holder {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.single-work img {
  width: 100%;
}

.single-work h1 {
  color: #172b4d;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
}

.single-work .experience {
  display: flex;
  flex-direction: row;
  gap: 32px;
}

.single-work .experience span {
  color: #344563;
  font-weight: 600;
}

.single-work .experience ul {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 32px;
}

.single-work .experience ul li {
  color: #7a869a;
}

.btn {
  border: 1px solid #396df2;
  text-decoration: none;
  width: fit-content;
  border-radius: 12px;
  padding: 12px;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  color: #396df2;
  cursor: pointer;
  transition: 300ms;
}

.btn:hover,
.btn:active {
  background-color: #396df2;
  color: #fff;;
}

.about-myself {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  margin: 0 24px;
  border-top-right-radius: 100px;
  animation: 15s infinite alternate slidein;
}

@keyframes slidein {
  from {
    margin-left: 100%;
    width: 300%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

.languages {
  display: flex;
  flex-direction: column;
  padding: 0 36px;
  margin-top: 0;
}

.languages .heading {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-top: 30px;
  padding-bottom: 30px;
}

.chevron-right {
  width: 6px;
}

.chevron-down {
  width: 12px;
}

.individual-languages {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.individual-languages > div {
  background-color: #f7f7f9;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 16px;
  padding: 12px 9px;
  border-radius: 6px;
}

.individual-languages img {
  height: 48px;
}

.grey-bottom-border {
  border-bottom: 1px solid #dfe1e6;
}

.about {
  padding: 16px;
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.about h1 {
  color: #172b4d;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
}

.contact-me {
  display: flex;
  flex-direction: column;
  background-color: #6070ff;
  background-repeat: no-repeat;
  border-radius: 100px 0 0;
  background-image: url("../img/contact-shape.svg");
  background-position: top 20px right;
  width: 100%;
  height: 779px;
  margin-top: 103px;
  padding-bottom: 20px;
}

.contact-text {
  padding-top: 103px;
  display: flex;
  flex-direction: column;
  margin: 0 24px;
  animation: 15s infinite alternate slidein;
}

@keyframes slidein {
  from {
    margin-left: 100%;
    width: 300%;
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

.contact-text h2 {
  text-align: center;
  color: #fff;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
}

.contact-text p {
  margin-top: 14px;
  text-align: center;
  color: #ebebff;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 28px;
}

input[type="text"] {
  height: 48px;
  background-color: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  padding-left: 16px;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 17px;
  line-height: 20px;
}

input[type="email"] {
  margin-top: 20px;
  height: 48px;
  background-color: #fff;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  padding-left: 16px;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 17px;
  line-height: 20px;
}

textarea {
  margin-top: 18px;
  height: 170px;
  background-color: #fff;
  padding: 15px 0 15px 16px;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 17px;
  line-height: 20px;
  box-sizing: border-box;
  resize: none;
}

.button-submit {
  margin-top: 22px;
  width: 170px;
  height: 48px;
  background-color: #fff;
  border-radius: 8px;
  border: none;
  padding: 12px 16px;
  font-family: Poppins, sans-serif;
  font-style: normal;
  color: #6070ff;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  cursor: pointer;
}

.button-submit:hover,
.button-submit:active {
  background-color: #6070ff;
  color: #fff;
}

.last-line {
  align-items: center;
  margin: 8px auto;
}

@media only screen and (min-width: 992px) {
  body {
    height: 4208px;
    width: 100%;
    overflow-x: hidden;
  }

  

  .menu-icon {
    display: none;
  }

  .navbar nav {
    display: grid;
    grid-template-columns: auto auto;
  }

  .navbar nav ul {
    display: flex;
    flex-direction: row;
    align-items: center;
    background: none;
    position: unset;
    height: auto;
    width: 100%;
    padding: 15px;
  }

  .navbar nav ul li {
    list-style: none;
    margin: 0 20px;
  }

  .navbar nav ul li a {
    text-decoration: none;
    color: #344563;
    font-family: Poppins, sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    line-height: 20px;
  }

  .main-content {
    background-image: url("../img/desktop-bg.svg");
    padding: 0;
    height: 916px;
  }

  .primary {
    margin-top: 288px;
    width: 100%;
    height: 122px;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 60px;
    color: #091e42;
    padding: 0 260px;
  }

  .primary span {
    content: "\A";
  }

  .profile-text {
    margin-top: 12px;
    padding: 0 260px;
  }

  .purple-text1 p {
    padding-left: 260px;
    color: #7f8cff;
    font-weight: 500;
    margin-top: 12px;
  }

  .social-media-icons1 {
    padding-left: 260px;
    margin-top: 14px;
  }

  .purple-text2 {
    padding-left: 0;
    color: #7f8cff;
    font-weight: 500;
  }

  .social-media-icons2 {
    padding-left: 0;
  }

  .works {
    box-sizing: border-box;
    margin: 142px;
  }

  .single-work {
    display: flex;
    flex-direction: row;
    gap: 24px;
    padding: 24px;
    border-radius: 24px;
    border: 1px solid #dfe1e6;
    height: fit-content(100%);
    height: auto;
  }

  .works .single-work:nth-child(odd) {
    flex-direction: row-reverse;
  }

  .works .single-work:nth-child(even) {
    flex-direction: row;
  }

  .single-work > img,
  .single-work > div {
    width: 50%;
  }

  .single-work .holder {
    display: flex;
    flex-direction: column;
    gap: 24px;
  }

  .btn {
    box-shadow: 0 5px 3px #ccc;
    text-decoration: none;
    width: fit-content;
    border-radius: 12px;
    padding: 12px;
    font-weight: 500;
    font-size: 17px;
    line-height: 24px;
    color: #396df2;
    background-color: #fff;
    cursor: pointer;
    transition: 300ms;
  }

  .btn:hover,
  .btn:active {
    background-color: #396df2;
    color: #fff;
  }

  .about-myself {
    display: grid;
    grid-template-columns: 40% 60%;
    background-color: #fff;
    margin: 0;
    border-top-right-radius: 100px;
    box-sizing: border-box;
  }

  .about {
    display: flex;
    flex-direction: column;
    gap: 15px;
    padding: 142px 37px 146px 142px;
  }

  .languages {
    display: flex;
    flex-direction: column;
    padding: 166px 184px 166px 37px;
    margin-top: 0;
    right: 0;
  }

  .individual-languages {
    display: flex;
    flex-direction: row;
  }

  .individual-languages > div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 12px;
    width: 120px;
  }

  .contact-me {
    background-image: url("./img/desktop-contact.svg");
    height: 846px;
    padding-bottom: 20px;
  }

  .contact-text {
    margin: 12px 0;
  }

  .contact-text h2 {
    margin: 0 320px;
  }

  .contact-text p {
    margin: 0 436px;
    height: 102px;
  }

  .form {
    margin: 12px 496px 0;
  }

  .button-submit {
    width: 170px;
    height: 48px;
    background-color: #fff;
    border-radius: 8px;
    border: none;
    padding: 12px 16px;
    font-family: Poppins, sans-serif;
    font-style: normal;
    color: #6070ff;
    font-weight: 500;
    font-size: 17px;
    line-height: 24px;
    cursor: pointer;
    margin: 27px auto 127px;
  }

  .button-submit:hover,
  .button-submit:active {
    background-color: #6070ff;
    color: #fff;
  }

  .last-line {
    display: none;
  }
}

